[project]
name = "labs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.12.0",
    "pytest>=8.4.2",
    "ruff>=0.14.7",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
omit = [
    "tests/*",
    "*/__init__.py",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
